<resources>
    <string name="app_name">AuthProject</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_plain">Login</string>
    <string name="pass_plain">Password</string>
    <string name="pin_plain">PIN code</string>
    <string name="sing_in_button">Sign in</string>
    <string name="sing_up_button">Sign up</string>
    <string name="log_out_button">Log out</string>
    <string name="submit_button">Submit</string>
    <string name="short_error">this field requires 6 symbols</string>
    <string name="title_activity_login">Sign in</string>
    <string name="user_not_exists_error">User with this login does not exists</string>
    <string name="wrong_password_error">Wrong password</string>
    <string name="pin_incorrect_error">Pin should be 4 sybmols</string>
    <string name="pin_wrong_error">Pin should be 4 sybmols</string>
    <string name="user_already_exists_error">User with this nickname already exists</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="radio_button_text">Should Randomize Notes</string>
    <string name="action_settings">Settings</string>

</resources>
