<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/login_plain" />

    <EditText
        android:id="@+id/password_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass_plain"
        />

    <Button
        android:id="@+id/sign_in_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sing_in_button" />

    <Button
        android:id="@+id/sign_up_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sing_up_button" />
</LinearLayout>