<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_plain" />

    <EditText
        android:id="@+id/pass_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass_plain"/>

    <EditText
        android:id="@+id/pin_Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:password="true"
        android:hint="@string/pin_plain" />

    <Button
        android:id="@+id/submit_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button" />
</LinearLayout>